# zenradeConverter

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  spotify.py  workers.py
zenradeconverter/: __main__.py  cli.py  downloader.py  ffmpeg_setup.py  gui.py  spotify.py  workers.py
