[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zenradeconverter"
version = "0.2.0"
description = "YouTube / Spotify URL → audio file (MP3/FLAC/M4A)"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "yt-dlp>=2026.3.17",
    "mutagen>=1.47.0",
    "PySide6>=6.7",
    "spotdl>=4.5.0",
]

[project.scripts]
zenradeconverter = "zenradeconverter.__main__:main"
